meta description and title added, .container overflow none for disable horizontal scroll bar, change 100vh by 100dvh to fit into nav bar of mobile browser, police changed to fix bug on iPhone12

--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,15 @@ a {
 
 body {
     font-family: 'Space Mono', monospace;
+    font-size: 0.9rem;
 }
 
 .container {
-    height: 100vh;
+    overflow: hidden;
+    height: 100dvh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+
 }
 
 .v-slider-bloc {
@@ -28,7 +31,7 @@ body {
     justify-content: center;
     align-items: center; */
     /* border-bottom: 5px solid #333; */
-    height: 100vh;
+    height: 100dvh;
     scroll-snap-align: center;
 }
 
@@ -255,7 +258,6 @@ body {
 /*iPhone SE*/
 
 @media only screen
-    and (min-device-height: 600px)
     and (max-device-height: 700px)
     and (-webkit-min-device-pixel-ratio: 2) {
 
